tests/valid/import/wildcard.rs
/*
executionExitCode: 47
*/

* @ std::test::import::valid;

main(): i32 {
    return imported() + magic_number;
}
