tests/invalid/import/error_in_imported.rs
/*
compilationExitCode: 2
*/

* @ std::test::import::invalid;

main(): i32 {
    return imported() + magic_number;
}
